--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -79,11 +79,11 @@
     <div class="d-none d-lg-block">
       <div class="row disappearJ bgWhite">
         <div class="col topFive">
-          <div class="card cardJ" style="width: 280px; border: 0;">
+          <div class="card" style="width: 280px; border: 0;">
             <img src="../assets/drinkCard1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text sansCollectionJ topFiveTxt2">#1 Favorite
-              <div class="topFiveTxt">Tangy Taro</div> $5.89</p>
+              <p class="card-text sansCollectionJ sandwichT">#1 Favorite
+              <div class="sandwichTxtT2 topFiveTxt">Tangy Taro</div> $5.89</p>
               <div class="row starRowJ">
                 <img class="star2J" src="../assets/Star.png" alt="">
                 <img class="star2J" src="../assets/Star.png" alt="">
@@ -95,10 +95,10 @@
           </div>
         </div>
         <div class="col topFive">
-          <div class="card cardJ" style="width: 280px; border: 0;">
+          <div class="card" style="width: 280px; border: 0;">
             <img src="../assets/drinkCard2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text sansCollectionJ topFiveTxt2 ">"The Go To Drink"
+              <p class="card-text sansCollectionJ sandwichT ">"The Go To Drink"
               <div class="topFiveTxt">Green Tea Gangbusters</div> $5.89</p>
               <div class="row starRowJ">
                 <img class="star2J" src="../assets/Star.png" alt="">
@@ -111,11 +111,11 @@
           </div>
         </div>
         <div class="col topFive">
-          <div class="card cardJ" style="width: 280px; border: 0;">
+          <div class="card" style="width: 280px; border: 0;">
             <img src="../assets/drinkCard3.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text sansCollectionJ topFiveTxt2">Top Seller
-              <div class="topFiveTxt">Iced Thai Tea</div> $5.69</p>
+              <p class="card-text sansCollectionJ sandwichT">Top Seller
+              <div class="sandwichTxtT2 topFiveTxt">Iced Thai Tea</div> $5.69</p>
               <div class="row starRowJ">
                 <img class="star2J" src="../assets/Star.png" alt="">
                 <img class="star2J" src="../assets/Star.png" alt="">
@@ -127,10 +127,10 @@
           </div>
         </div>
         <div class="col topFive">
-          <div class="card cardJ" style="width: 280px; border: 0;">
+          <div class="card" style="width: 280px; border: 0;">
             <img src="../assets/drinkCard4.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text sansCollectionJ topFiveTxt2">#1 Recommended
+              <p class="card-text sansCollectionJ sandwichT">#1 Recommended
               <div class="topFiveTxt">Appealing Avocado</div> $5.89</p>
               <div class="row starRowJ">
                 <img class="star2J" src="../assets/Star.png" alt="">
@@ -143,10 +143,10 @@
           </div>
         </div>
         <div class="col topFive">
-          <div class="card cardJ" style="width: 280px; border: 0;">
+          <div class="card" style="width: 280px; border: 0;">
             <img src="../assets/drinkCard5.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text sansCollectionJ topFiveTxt2">#2 Recommended
+              <p class="card-text sansCollectionJ sandwichT">#2 Recommended
               <div class="topFiveTxt"> HoneyDew Milk Tea</div> $5.69</p>
               <div class="row starRowJ">
                 <img class="star2J" src="../assets/Star.png" alt="">
