--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -90,11 +90,11 @@
         <div class="d-none d-lg-block">
             <div class="row disappearJ bgWhite">
                 <div class="col topFive">
-                    <div class="card cardJ" style="width: 280px; border: 0;">
+                    <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
                         <div class="card-body">
-                            <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite
-                            <div class="sandwichJ">Grilled Pork</div> $5.79</p>
+                            <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Favorite
+                            <div class="topFiveTxt">Grilled Pork</div> $5.79</p>
                             <div class="row starRowJ">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
@@ -106,11 +106,11 @@
                     </div>
                 </div>
                 <div class="col topFive">
-                    <div class="card cardJ" style="width: 280px; border: 0;">
+                    <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
                         <div class="card-body">
-                            <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly
-                            <div class="sandwichJ">Vegetarian</div> $5.79</p>
+                            <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Diet Friendly
+                            <div class="topFiveTxt">Vegetarian</div> $5.79</p>
                             <div class="row starRowJ">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
@@ -122,11 +122,11 @@
                     </div>
                 </div>
                 <div class="col topFive">
-                    <div class="card cardJ" style="width: 280px; border: 0;">
+                    <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                         <div class="card-body">
-                            <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">Top Seller
-                            <div class="sandwichJ">BBQ Pork</div> $5.79</p>
+                            <p class="card-text sansCollectionJ sandwichT sandwichTxtT">Top Seller
+                            <div class="topFiveTxt">BBQ Pork</div> $5.79</p>
                             <div class="row starRowJ">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
@@ -138,12 +138,12 @@
                     </div>
                 </div>
                 <div class="col topFive">
-                    <div class="card cardJ" style="width: 280px; border: 0;">
+                    <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard4.png" class="card-img-top"
                             alt="Picture of Ham and Cheese Croissant">
                         <div class="card-body">
-                            <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Croissant
-                            <div class="sandwichJ">H & C Croissant</div> $6.49</p>
+                            <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Croissant
+                            <div class="sandwichTxtT topFiveTxt">H & C Croissant</div> $6.49</p>
                             <div class="row starRowJ">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
@@ -155,12 +155,12 @@
                     </div>
                 </div>
                 <div class="col topFive">
-                    <div class="card cardJ" style="width: 280px; border: 0;">
+                    <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard5.png" class="card-img-top"
                             alt="Picture of Ham and Cheese Baguette">
                         <div class="card-body">
-                            <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Baguette
-                            <div class="sandwichJ">H & C Baguette</div> $6.19</p>
+                            <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Baguette
+                            <div class="sandwichTxtT topFiveTxt">H & C Baguette</div> $6.19</p>
                             <div class="row starRowJ">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
                                 <img class="star2J" src="../assets/Star.png" alt="Picture of star">
@@ -176,9 +176,9 @@
 
         <div class="row d-sm-block d-md-none">
             <div class="col g-0">
-              <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="">
+                <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="">
             </div>
-          </div>
+        </div>
 
         <div class="row">
             <div class="headBox">
