--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -199,17 +199,17 @@
                 <div class="line"></div>
                 <div class="foodText">
                     <span>#1 Special Combination<span class="numberOne">$5.79</span></span>
-                    <div>Steamed Pork Roll, Salted Ham</div>
+                    <div>Steamed Pork Roll & Salted Ham</div>
                     <span>#2 Pork Combination<span class="numberTwo">$5.79</span></span>
-                    <div>Salted Ham, Headcheese, Butter</div>
+                    <div>Salted Ham, Headcheese & Butter</div>
                     <span>#3 Grilled Pork<span class="numberThree">$5.79</span></span>
-                    <div>Garlic Grilled Pork, Butter Pate</div>
+                    <div>Garlic Grilled Pork, Butter & Pate</div>
                     <span>#4 B.B.Q Pork<span class="numberFour">$5.79</span></span>
-                    <div>B.B.Q Pork, Pate, Butter</div>
+                    <div>B.B.Q Pork, Pate & Butter</div>
                     <span>#5 Grilled Chicken<span class="numberFive">$5.79</span></span>
                     <div>Garlic Grilled Chicken & Butter</div>
                     <span>#6 Pork Roll<span class="numberSix">$5.79</span></span>
-                    <div>Steamed Pork Patty, Butter, Pate</div>
+                    <div>Steamed Pork Patty, Butter & Pate</div>
                 </div>
             </div>
         </div>
@@ -220,15 +220,15 @@
                 <div class="line"></div>
                 <div class="foodText">
                     <span>#7 Vegetarian<span class="numberSeven">$5.79</span></span>
-                    <div>Tofu Skin, Yam, Noodles</div>
+                    <div>Tofu Skin, Yam & Noodles</div>
                     <span>#8 Roast Beef & Cheese Baguette<span class="numberEight">$6.19</span></span>
                     <div>Roast Beef </div>
-                    <span>#9 Turkey, Ham, & Cheese Baguette<span class="numberNine">$6.19</span></span>
-                    <div>Sliced Turkey, Sliced Ham, American Cheese</div>
+                    <span>#9 Turkey, Ham & Cheese Baguette<span class="numberNine">$6.19</span></span>
+                    <div>Sliced Turkey, Sliced Ham & American Cheese</div>
                     <span>#10 Ham Cheese Baguette<span class="numberTen">$6.19</span></span>
                     <div>Sliced Ham & American Cheese</div>
                     <span>#11 Turkey & Ham Baguette<span class="numberEleven">$6.19</span></span>
-                    <div>Sliced Turkey, Sliced Ham, American Cheese</div>
+                    <div>Sliced Turkey, Sliced Ham & American Cheese</div>
                     <span>#12 Salami & Cheese Baguette<span class="numberTwelve">$6.19</span></span>
                     <div>Sliced Salami & American Cheese</div>
                 </div>
@@ -397,56 +397,92 @@
 
     <!-- Footer -->
 
-    <hr class="yellowJ hrLineJ mt-4">
+    <hr class="yellowJ hrLineJ hrMargin">
 
-    <div class="container-fluid footerPaddingJ">
-        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-            <div class="col-4" style="padding-left: 3%;">
-                <div class="row yellowJ abrilFatfaceJ">
-                    <h2 class="footerFontSize3">Best Sandwiches</h2>
-                </div>
-                <div class="row yellowJ abrilFatfaceJ">
-                    <h2 class="footerFontSize3">& Smoothies</h2>
-                </div>
-            </div>
-            <div class="col" style="padding-left: 2%;">
-                <div class="row">
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                            <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
-                        </div>
-                        <div class="row">
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
-                            <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
-                                    alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="container-fluid footerPaddingJ disappearJ">
+    <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+      <div class="col-4" style="padding-left: 3%;">
+        <div class="row yellowJ abrilFatfaceJ">
+          <h2 class="footerFontSize3">Best Sandwiches</h2>
         </div>
-    </div>
+        <div class="row yellowJ abrilFatfaceJ">
+          <h2 class="footerFontSize3">& Smoothies</h2>
+        </div>
+      </div>
+      <div class="col" style="padding-left: 2%;">
+        <div class="row">
+          <div class="col">
+            <div class="row sansCollectionJ">
+              <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+              <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+              <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+              <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+            </div>
+          </div>
 
+          <div class="col">
+            <div class="row sansCollectionJ">
+              <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+              <p class="yellowJ footerFontSize">
+                <img src="../assets/phone symbol.png" alt="">
+                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+              </p>
+              <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+              <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="row">
+              <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+            </div>
+            <div class="row">
+              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+              </a>
+              <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+              </a>
+              <a class="footerIconsJ" href="../index.html">
+                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+    <div class="row">
+      <div class="col">
+        <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+          <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+        </p>
+        <p class="yellowJ footerFontSize" style="width: 115px;">
+          3330 E Hammer Ln Ste C Stockton, CA 95212
+        </p>
+      </div>
+      <div class="col">
+        <div class="row rightJ">
+          <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+          </a>
+          <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+          </a>
+          <a class="footerIconsMobileJ" href="../index.html">
+            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+          </a>
+        </div>
+        <div class="row">
+          <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+            Smoothies</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
